# autoloop

./: .gitignore  CLAUDE.md  README.md  THEORY.md  analyze.py  analyze_windows.py  anneal.py  cli.py  controller.py  crossover_sweep.py  engine.py  experiment.py  explorer.md  explorer.py  generate.py  ldense_sweep.py  loop  metrics.py  migrate_runs.py  observations.md  pilot-runs.md  pilot_sweep.py  plot.py  plot_window_scaling.py  precollapse.py  project-brief.md  pyproject.toml  rebuild_decoded_text.py  reproduce_plots.py  reproduce_plots.sh  run-index.md  runindex.py  schema.py  seed_sweep.py  semantic.py  summary_table.py  survey.py  sweep.py  utils.py
analyze/: __init__.py  compressibility.py  metrics.py  semantic.py  summary.py
autoloop/: __init__.py  basin.py  cli.py  clustering.py  engine.py  experiment.py  explorer.py  grep_text.py  metrics.py  plot.py  precollapse.py  precollapse_report.py  resolve.py  runindex.py  runlib.py  semantic.py  semantic_clouds.py  semantic_report.py  summary.py  survey.py  sweep.py  utils.py
docs/: annealing-experiment.md  basin-clustering-plan.md  basin-mapping-phase1.md  basin-mapping.md  enriching-degrading-examples.md  enriching-stabilising-examples.md  explorer-wireframes.md  handoff-basin-taxonomy.md  handoff-recollection.md  handover-2026-03-10c.md  handover-2026-03-10d.md  handover-2026-03-10e.md  handover-2026-03-12.md  info-theory-metrics.md  interaction-topology.md  observations-2026-03-06.md  observations-2026-03-07.md  observations-2026-03-08.md  observations-2026-03-09.md  observations-2026-03-10.md  page.md  share.md  (+13 more)
(+19 files in other folders)
